# rust_template

./: .env.development  .gitignore  Cargo.toml  README.md  deny.toml
config/: mqtt.yaml  mysql.yaml  redis.yaml
crates/core/: Cargo.toml
crates/core/src/: lib.rs  mqtt_event.rs
crates/core/src/example/: app.rs  entity.rs  mod.rs  notifier.rs  repo.rs  service.rs  value.rs
crates/core/src/mqtt_event/: mod.rs
crates/ffi/: Cargo.toml
crates/ffi/src/: lib.rs  mqtt_client.rs  mysql_client.rs
crates/ffi/src/impls/: mod.rs
crates/ffi/src/redis_client/: mod.rs
crates/interfaces/: Cargo.toml
crates/interfaces/src/: app_context.rs  http.rs  main.rs
crates/shared/: Cargo.toml
crates/shared/src/: flexi_logger.rs  json.rs  lib.rs
scripts/app/: debug.sh  release.sh  release_check.sh
scripts/init_dev_container/: init.sh  install.sh  startup.sh
src/: app_shared.rs  axum1.rs  main.rs
src/application/: example_service.rs  mod.rs
src/domain/: mod.rs
src/domain/example/: entity.rs  mod.rs  repository.rs  service.rs  value.rs
src/domain/traits/: mod.rs
src/infra/: mod.rs
src/infra/messaging/: mod.rs
src/infra/persistence/redis/script/: mod.rs
src/infrastructure/messaging/mqtt/: mod.rs
src/infrastructure/persistence/: mod.rs
src/infrastructure/persistence/mysql/: mod.rs
src/infrastructure/persistence/redis/: mod.rs
src/interfaces/: mod.rs
src/interfaces/controllers/: mod.rs
src/interfaces/http/: mod.rs  shared.rs
src/interfaces/services/: mod.rs
src/shared/: mod.rs
src/shared/utils/: flexi_logger.rs  mod.rs
