[workspace]
members = [
    "crates/core",
    "crates/ffi",
    "crates/interfaces",
    "crates/shared"
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
internal_core = { path = "crates/core", version = "0.1.0" }
internal_ffi = { path = "crates/ffi", version = "0.1.0" }
internal_shared = { path = "crates/shared", version = "0.1.0" }

log = "0.4.27"
flexi_logger = "0.31.2"
anyhow = "1.0.99"
thiserror = "2.0.15"

tokio = { version = "1.47.1", default-features = false, features = ["rt", "rt-multi-thread", "net", "fs", "time", "sync", "signal"] }
axum = "0.8.4"
tower = { version = "0.5.2", default-features = false, features = ["limit", "timeout"] }

r2d2 = "0.8.10"
redis = { version = "0.32.5", default-features = false, features = ["r2d2", "script"] }
mysql = { version = "26.0.1", features = ["rust_decimal", "chrono"]}
rumqttc = "0.24.0"

serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = "1.0.142"
serde_yaml = "0.9.33"

dotenvy = "0.15.7"
async-trait = "0.1.88"
crossbeam-utils = "0.8.21"
rust_decimal = "1.37.2"
rust_decimal_macros = "1.37.1"
xx-toolkit = { git = "https://github.com/ifeisier/xx-toolkit", branch = "main", version = "0.1.0" }
