[workspace]
members = [
    "crates/core",
    "crates/ffi",
    "crates/interfaces",
    "crates/shared"
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
internal_core = { path = "crates/core", version = "0.1.0" }
internal_ffi = { path = "crates/ffi", version = "0.1.0" }
internal_shared = { path = "crates/shared", version = "0.1.0" }

log = "0.4.28"
flexi_logger = "0.31.7"
anyhow = "1.0.100"
thiserror = "2.0.17"

tokio = { version = "1.48.0", default-features = false, features = ["rt", "rt-multi-thread", "net", "fs", "time", "sync", "signal"] }
axum = "0.8.6"
tower = { version = "0.5.2", default-features = false, features = ["limit", "timeout"] }

r2d2 = "0.8.10"
redis = { version = "0.32.7", default-features = false, features = ["r2d2", "script"] }
mysql_async = { version = "0.36.1", features = ["rust_decimal", "chrono"]}
rumqttc = "0.25.0"
moka = { version = "0.12.11", features = ["future"]}

serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.33"

dotenvy = "0.15.7"
async-trait = "0.1.89"
crossbeam = "0.8.4"
rust_decimal = "1.39.0"
rust_decimal_macros = "1.39.0"
# pyo3 = { version = "0.26.0", features = ["auto-initialize"] }
xx-toolkit = { git = "https://github.com/ifeisier/xx-toolkit", branch = "main", version = "0.1.0" }
