[package]
name = "interfaces"
version = "0.1.0"
license = "MIT"
edition.workspace = true
description = "暴露给外部的接口 (Web 服务)"

[dependencies]
internal_core = { workspace = true }
internal_ffi = { workspace = true }
internal_shared = { workspace = true }
rumqttc = {workspace = true}
serde_json = {workspace = true}
dotenvy = {workspace = true}
axum = {workspace = true}
anyhow = {workspace = true}
log = {workspace = true}
tokio = {workspace = true}
